--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,30 @@
   <body>
     <% if user_signed_in? %>
       <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+      <%= link_to 'Home',  %>
       </li>
+      <li>
+      <%= link_to 'Users', user_path(current_user.id) %>
+      </li>
+      <li>
+      <%= link_to 'Books', user_path(current_user.id) %>
+      </li>
+      <li>
+        <%= link_to "logout", destroy_user_session_path, method: :delete %>
+      </li>
+      
     <% else %>
       <li>
-        <%= link_to "新規登録", new_user_registration_path %>
+      <%= link_to 'Home', user_path(current_user.id) %>
       </li>
       <li>
-        <%= link_to "ログイン", new_user_session_path %>
+      <%= link_to 'About', user_path(current_user.id) %>
+      </li>
+      <li>
+        <%= link_to "sign up", new_user_registration_path %>
+      </li>
+      <li>
+        <%= link_to "login", new_user_session_path %>
       </li>
     <% end %>
     <%= yield %>
