--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,10 @@
 <% @books.each do |post_image| %>
 <div>
   <%= link_to book_path(book.id) do %>
-    <!--<%= attachment_image_tag post_image, :image %>-->
+  <p><%= attachment_image_tag post_image.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %></p>
   <% end %>
-  <p>投稿ユーザー画像：<%= image_tag('sample-author1.jpg') %></p>
-  <p>ショップ名：<%= post_image.shop_name %></p>
-  <p>説明：<%= post_image.caption %></p>
-  <p>ユーザーネーム：<%= post_image.user.name %></p>
+  <p>Title：<%= book.book_name %></p>
+  <p>Opinion：<%= book.body %></p>
+  
 </div>
 <% end %>
