--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
   <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
   <label for="inputImage">ProfileImage</label>
   <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>  
-  <label for="inputIntroduction">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputIntroduction", placeholder:"introduction"%>
-  <%= f.submit "変更を保存" %>
+  <label for="inputIntroduction">Introduction</label>
+  <%= f.text_field :introduction, autofocus: true, id:"inputIntroduction", placeholder:"introduction"%>
+  <%= f.submit "Update User" %>
 <% end %>
