--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,4 @@
 <h1>welcome to Bookers2 !!</h1>
 
+<p><%= link_to "log in", new_user_session_path %></p>
+<p><%= link_to "sign_up", new_user_registration_path %></p>
