--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,13 @@
   <body>
     <% if user_signed_in? %>
       <li>
-      <%= link_to 'Home',  %>
+      <%= link_to 'Home', user_path(current_user.id) %>
       </li>
       <li>
-      <%= link_to 'Users', user_path(current_user.id) %>
+      <%= link_to 'Users', users_path %>
       </li>
       <li>
-      <%= link_to 'Books', user_path(current_user.id) %>
+      <%= link_to 'Books', books_path %>
       </li>
       <li>
         <%= link_to "logout", destroy_user_session_path, method: :delete %>
@@ -26,10 +26,10 @@
       
     <% else %>
       <li>
-      <%= link_to 'Home', user_path(current_user.id) %>
+      <%= link_to 'Home', root_path %>
       </li>
       <li>
-      <%= link_to 'About', user_path(current_user.id) %>
+      <%= link_to 'About', root_path %>
       </li>
       <li>
         <%= link_to "sign up", new_user_registration_path %>
