--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,4 +6,27 @@
   <% end %>
 </div>
 
-<h2>Books</h2>
+<div class="card-list-containar py-5">
+  <% @books.each do |book| %>
+  <div class="card w-50 mx-auto mt-4 shadow-lg">
+    <%= link_to book_path(book.id) do %>
+      <%= attachment_image_tag post_image, :image, class:"card-img-top"; %>
+    <% end %>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-2">
+          <%= attachment_image_tag post_image.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"mt-3 rounded-circle"; %>
+        </div>
+        <div class="col-10">
+          <p class="card-title">
+            <%= link_to(book_path(book.id), class:"text-dark") do %>
+              <strong><i class="far fa-flag"></i><span> <%= book.book_name %></span></strong>
+            <% end %>
+          </p>
+          <p class="card-text">説明：<%= book.body %></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <% end %>
+</div>
