--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,14 +1,23 @@
 <div class="profile-container">
-  <h3 class="profile-name"><%= @user.name %></h3>
-   <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-   <% if @user.id == current_user.id %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+
+   <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+   <h3 class="profile-name"><%= user.name %></h3>
+   <h3><%= user.introduction %></h3>
+   <% if user.id == current_user.id %>
+    <p><%= link_to "プロフィール編集", edit_user_path(user) %></p>
   <% end %>
 </div>
 
+
 <h2>New Book</h2>
-<%= form_with model: @book, local:true do |f| %>
-  
+<% if book.errors.any? %>
+  <%= book.errors.count %>error prohibited this obj from being saved:
+  <% book.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
+
+<%= form_with model: book, local:true do |f| %>
   <h4>Title</h4>
   <%= f.text_field :book_name %>
   <h4>Opinion</h4>
