--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,8 @@
-<% @books.each do |post_image| %>
+<%= render 'books/list', user: @user,book: @book %>
+<% @books.each do |book| %>
 <div>
   <%= link_to book_path(book.id) do %>
-  <p><%= attachment_image_tag post_image.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %></p>
+  <p><%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %></p>
   <% end %>
   <p>Title：<%= book.book_name %></p>
   <p>Opinion：<%= book.body %></p>
