--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,14 @@
+<%= render 'books/list', user: @user,book: @book %>
+
+
 <div class="post-body">
-  <%= attachment_image_tag @post_image, :image %>
-  <p>ショップ名：<%= @post_image.shop_name %></p>
-  <p>説明：<%= @post_image.caption %></p>
-  <p>ユーザーネーム：<%= @post_image.user.name %></p>
-  <p>投稿日時：<%= @post_image.created_at.strftime('%Y/%m/%d') %></p>
+  <h1>Book detail</h1>
+  <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+  <h3 class="profile-name"><%= @user.name %></h3>
+   
+  <p><%= @book.book_name %></p>
+  <p><%= @book.body %></p>
+
+<%= link_to "Edit", edit_book_path(@book) %>
+<%= link_to "Destroy", books_path(@book), method: :delete ,"data-confirm" => "本当に消しますか?" %>
 </div>
