--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,14 @@
-<div class="profile-container">
-  <h3 class="profile-name"><%= @user.name %></h3>
-   <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-   <% if @user.id == current_user.id %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-  <% end %>
-</div>
+<%= render 'books/list', user: @user,book: @book %>
+
 
 <div class="card-list-containar py-5">
   <% @books.each do |book| %>
   <div class="card w-50 mx-auto mt-4 shadow-lg">
-    <%= link_to book_path(book.id) do %>
-      <%= attachment_image_tag post_image, :image, class:"card-img-top"; %>
-    <% end %>
+    
     <div class="card-body">
       <div class="row">
         <div class="col-2">
-          <%= attachment_image_tag post_image.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"mt-3 rounded-circle"; %>
+          <%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"mt-3 rounded-circle" %>
         </div>
         <div class="col-10">
           <p class="card-title">
