--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,9 +3,11 @@
 
 <div class="post-body">
   <h1>Book detail</h1>
+  <%= link_to user_path(@user.id) do %>
   <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
   <h3 class="profile-name"><%= @user.name %></h3>
-   
+  <% end %>
+
   <p><%= @book.book_name %></p>
   <p><%= @book.body %></p>
 
