--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,6 @@
  *= require_tree .
  *= require_self
  */
-
-/*# sourceMappingURL=application.css.map */
+@import "bootstrap";
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
