--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,3 +2,35 @@
 
 <p><%= link_to "log in", new_user_session_path %></p>
 <p><%= link_to "sign_up", new_user_registration_path %></p>
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Bookers2Ver2</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/cb3d68a92d.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="/"><span>Bookers</span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+          <li><a class="fas fa-home nav-link text-light" href="/"> Home</a></li>
+          <li><a class="fas fa-link nav-link text-light" href="/home/about"> About</a></li>
+          <li><a class="fas fa-user-plus nav-link text-light" href="/users/sign_up"> sign up</a></li>
+          <li><a class="fas fa-sign-in-alt nav-link text-light" href="/users/sign_in"> login</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  </header>
+</body>
+</html>
