--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,11 +1,24 @@
 <div class="profile-container">
-
+<h2>User info</h2>
    <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-   <h3 class="profile-name"><%= user.name %></h3>
-   <h3><%= user.introduction %></h3>
-   <% if user.id == current_user.id %>
-    <p><%= link_to "プロフィール編集", edit_user_path(user) %></p>
-  <% end %>
+   <table class="table">
+      <tbody>
+        <tr></tr>
+        <tr>
+    	  <th>name</th>
+    	  <th><%= user.name %></th>
+        </tr>
+        <tr>
+	     <th><%= user.introduction %></th>
+	     <th></th>
+        </tr>
+    </tbody>
+   </table>
+   <% if @user.id == current_user.id %>
+       <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
+          <i class="fas fa-user-cog"></i>
+       <% end %>
+   <% end %>
 </div>
 
 
@@ -22,5 +35,5 @@
   <%= f.text_field :book_name %>
   <h4>Opinion</h4>
   <%= f.text_area :body %>
-  <%= f.submit 'Create Book' %>
+  <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
 <% end %>
