--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,50 +4,67 @@
     <title>Bookers2Ver2</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/cb3d68a92d.js" crossorigin="anonymous"></script>
   </head>
 
-   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="/"><span>Bookers</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ml-auto">
-            <% if user_signed_in? %>
-            <li>
-            <%= link_to "Home",user_path(current_user.id) ,class:"fas fa-home nav-link text-light" %>
-            </li>
-            <li>
-            <%= link_to "Users", users_path , class:"fas fa-users nav-link text-light" %>
-            </li>
-            <li>
-            <%= link_to "Books",books_path ,class:"fas fa-book-open nav-link text-light" %>
-            </li>
-            <li>
-            <%= link_to "logout",destroy_user_session_path, method: :delete ,class:"fas fa-sign-out-alt nav-link text-light" %>
-            </li>
-            <% else %>
-            <li>
-            <%= link_to "Home", root_path , class:"fas fa-home nav-link text-light" %>
-            </li>
-            <li>
-            <%= link_to "About", "/" , class:"fas fa-users nav-link text-light" %>
-            </li>
-            <li>
-            <%= link_to "sign up", new_user_registration_path , class:="fas fa-user-plus nav-link text-light" %>
-            </li>
-            <li>
-            <%= link_to "login", new_user_session_path , class:"fas fa-sign-in-alt nav-link text-light" %>
-            </li>
-            <% end %>
-          </ul>
+  <body>
+    <herder>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="/"><span>Bookers</span></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+              <li>
+              <%= link_to "Home",user_path(current_user.id) ,class:"fas fa-home nav-link text-light" %>
+              </li>
+              <li>
+              <%= link_to "Users", users_path , class:"fas fa-users nav-link text-light" %>
+              </li>
+              <li>
+              <%= link_to "Books",books_path ,class:"fas fa-book-open nav-link text-light" %>
+              </li>
+              <li>
+              <%= link_to "logout",destroy_user_session_path, method: :delete ,class:"fas fa-sign-out-alt nav-link text-light" %>
+              </li>
+              <% else %>
+              <li>
+              <%= link_to "Home", root_path , class:"fas fa-home nav-link text-light" %>
+              </li>
+              <li>
+              <%= link_to "About", "/" , class:"fas fa-users nav-link text-light" %>
+              </li>
+              <li>
+              <%= link_to "sign up", new_user_registration_path , class:"fas fa-user-plus nav-link text-light" %>
+              </li>
+              <li>
+              <%= link_to "login", new_user_session_path , class:"fas fa-sign-in-alt nav-link text-light" %>
+              </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </herder>
+
+    <main class="mb-auto">
+    <%= yield %>
+    </main>
+
+    <footer>
+      <div class="container mt-5">
+      	<div class="row">
+        	<div class="mx-auto">
+        		<p>CopyRight Infratop.inc</p>
+        	</div>
         </div>
       </div>
-    </nav>
+    </footer>
   </body>
 </html>
