--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,36 @@
-<%= render 'books/list', user: @user,book: @book %>
 
-
-<div class="card-list-containar py-5">
-  <% @books.each do |book| %>
-  <div class="card w-50 mx-auto mt-4 shadow-lg">
-    
-    <div class="card-body">
-      <div class="row">
-        <div class="col-2">
-          <%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"mt-3 rounded-circle" %>
-        </div>
-        <div class="col-10">
-          <p class="card-title">
-            <%= link_to(book_path(book.id), class:"text-dark") do %>
-              <strong><i class="far fa-flag"></i><span> <%= book.book_name %></span></strong>
-            <% end %>
-          </p>
-          <p class="card-text">説明：<%= book.body %></p>
-        </div>
-      </div>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'books/list', user: @user,book: @book %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Books</h2>
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td>
+                  <%= link_to book_path(book.id) do %>
+                  <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+                  <h3 class="profile-name"><%= @user.name %></h3>
+                  <% end %>
+              </td>
+              <td><%= book.book_name %></td>
+              <td><%= book.body %></td>  
+            </tr> 
+          <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
-  <% end %>
 </div>
+
