--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,6 +11,35 @@
   <p><%= @book.book_name %></p>
   <p><%= @book.body %></p>
 
-<%= link_to "Edit", edit_book_path(@book) %>
-<%= link_to "Destroy", books_path(@book), method: :delete ,"data-confirm" => "本当に消しますか?" %>
+
+
 </div>
+
+
+<p id="notice"></p>
+<div class="container">      
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'books/list', user: @user,book: @book %>
+    <div class="col-md-8 offset-md-1">
+  		<h2>Book detail</h2>
+  		<table class="table">
+  		  <tbody>
+  		    <tr>
+  		      <td>
+            <%= link_to user_path(@user.id) do %>
+            <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %><br>
+            <h3 class="profile-name"><%= @user.name %></h3>
+            <% end %>
+            </td>
+            <td><%= @book.book_name %></td>
+            <td><%= @book.body %></td>
+            <td><%= link_to "Edit", edit_book_path(@book) class="btn btn-sm btn-success" %></td>
+            <td><%= link_to "Destroy", books_path(@book), method: :delete ,"data-confirm" => "本当に消しますか?" class="btn btn-sm btn-danger" %></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+     
