--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,17 +1,31 @@
-<h2>プロフィール編集</h2>
-<% if @user.errors.any? %>
-  <%= @user.errors.count %>error prohibited this obj from being saved:
-  <% @user.errors.full_messages.each do |message| %>
-    <%= message %>
-  <% end %>
-<% end %>
-<%= form_with model:@user, local:true do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
-  <label for="inputImage">ProfileImage</label>
-  <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>  
-  <label for="inputIntroduction">Introduction</label>
-  <%= f.text_field :introduction, autofocus: true, id:"inputIntroduction", placeholder:"introduction"%>
-  <%= f.submit "Update User" %>
-<% end %>
+<p id="notice"></p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>User info</h2>
+      <% if @user.errors.any? %>
+        <%= @user.errors.count %>error prohibited this obj from being saved:
+          <% @user.errors.full_messages.each do |message| %>
+          <%= message %>
+        <% end %>
+      <% end %>
+
+      <%= form_with model:@user, local:true do |f| %>
+        <div class="form-group">
+          <label for="inputName">Name</label><br>
+          <%= f.text_field :name, autofocus: true, id:"inputName", class="form-control" %>
+        </div>
+        <div class="form-group">
+
+        <label for="inputImage"></label><br>
+        <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+        </div>
+        <div class="form-group">
+        <label for="inputIntroduction">Introduction</label><br>
+        <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", placeholder:""%>
+        </div>
+        <%= f.submit "Update User", class:"btn btn-secondary"%>
+      <% end %>
+    </div>
+  </div>
+</div>
