--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <herder>
+    <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="/"><span>Bookers</span></a>
@@ -51,10 +51,16 @@
           </div>
         </div>
       </nav>
-    </herder>
+    </header>
 
     <main class="mb-auto">
+    <div class="container">
+      <div class="row">
+        <%= render 'layouts/notifications' %>
+      </div>
+    </div>
     <%= yield %>
+    
     </main>
 
     <footer>
