--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,9 +18,9 @@
           <% @users.each do |user| %>
             <tr>
               <td>
-                  <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+                  <%= attachment_image_tag @user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %>
               </td>
-              <td><%= book.book_name %></td>
+              <td><%= user.name %></td>
               <td><%= link_to "Show" , user_path(user) %></td>
             </tr>
           <% end %>
