--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,26 +1,9 @@
-<%= render 'books/list', user: @user,book: @book %>
-
-
-<div class="post-body">
-  <h1>Book detail</h1>
-  <%= link_to user_path(@user.id) do %>
-  <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
-  <h3 class="profile-name"><%= @user.name %></h3>
-  <% end %>
-
-  <p><%= @book.book_name %></p>
-  <p><%= @book.body %></p>
-
-
-
-</div>
-
-
 <p id="notice"></p>
 <div class="container">      
   <div class="row">
     <div class="col-md-3">
       <%= render 'books/list', user: @user,book: @book %>
+    </div>
     <div class="col-md-8 offset-md-1">
   		<h2>Book detail</h2>
   		<table class="table">
@@ -29,13 +12,13 @@
   		      <td>
             <%= link_to user_path(@user.id) do %>
             <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %><br>
-            <h3 class="profile-name"><%= @user.name %></h3>
+            <%= @user.name %>
             <% end %>
             </td>
             <td><%= @book.book_name %></td>
             <td><%= @book.body %></td>
-            <td><%= link_to "Edit", edit_book_path(@book) class="btn btn-sm btn-success" %></td>
-            <td><%= link_to "Destroy", books_path(@book), method: :delete ,"data-confirm" => "本当に消しますか?" class="btn btn-sm btn-danger" %></td>
+            <td><%= link_to "Edit", edit_book_path(@book),class:"btn btn-sm btn-success" %></td>
+            <td><%= link_to "Destroy", book_path(@book), method: :delete ,"data-confirm" => "本当に消しますか?", class:"btn btn-sm btn-danger" %></td>
           </tr>
         </tbody>
       </table>
