--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,7 +15,7 @@
             <%= @user.name %>
             <% end %>
             </td>
-            <td><%= @book.book_name %></td>
+            <td><%= @book.title %></td>
             <td><%= @book.body %></td>
             <td><%= link_to "Edit", edit_book_path(@book),class:"btn btn-sm btn-success" %></td>
             <td><%= link_to "Destroy", book_path(@book), method: :delete ,"data-confirm" => "本当に消しますか?", class:"btn btn-sm btn-danger" %></td>
