--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,16 +13,15 @@
       <%= form_with model:@user, local:true do |f| %>
         <div class="form-group">
           <label for="inputName">Name</label><br>
-          <%= f.text_field :name, autofocus: true, id:"inputName", class="form-control" %>
+          <%= f.text_field :name, class:"form-control", autofocus: true, id:"inputName" %>
         </div>
         <div class="form-group">
-
         <label for="inputImage"></label><br>
         <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
         </div>
         <div class="form-group">
         <label for="inputIntroduction">Introduction</label><br>
-        <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", placeholder:""%>
+        <%= f.text_area :introduction,class:"form-control", autofocus: true, id:"inputIntroduction"%>
         </div>
         <%= f.submit "Update User", class:"btn btn-secondary"%>
       <% end %>
