--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -8,16 +8,6 @@
       </ul>
 <% end %>
 
-<% if @user.errors.any? %>
-  <div id="error_explanation" class="alert alert-danger">
-    <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
-
 <div class="profile-container">
 <h2>User info</h2>
    <%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
@@ -47,10 +37,10 @@
 <h2 class="mt-3">New book</h2>
 
 
-<%= form_with model: book, local:true do |f| %>
+<%= form_with model:book, local:true do |f| %>
   <h4>Title</h4>
-  <%= f.text_field :book_name %>
+  <%= f.text_field :title %>
   <h4>Opinion</h4>
   <%= f.text_area :body %>
-  <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
+  <%= f.submit "Create Book" %>
 <% end %>
