--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,21 +1,21 @@
-<p id="notice"></p>
 <div class="container">
     <div class="row">
       <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
   		  <h1>Editing Book</h1>
         <%= form_with model: @book, local: true do |f| %>
           <div class="form-group">
-            <label for="book_title">Title</label>
-            <%= f.text_field :book_name, autofocus: true, class:"form-control", id:"inputBook_Name" %>
+            <label for="title">Title</label>
+            <%= f.text_field :title, autofocus: true, class:"form-control", id:"inputTitle" %>
           </div>
           <div class="form-group">
             <label for="book_opinion">Opinion</label>
             <%= f.text_area :body, autofocus: true, class:"form-control", id:"inputBody" %>
           </div>
-        <% end %>
           <div class="form-group">
-            <input type="submit" name="commit" value="Update Book" class="btn btn-success" data-disable-with="Update Book">
+            <%= f.submit "Update Book" %>
           </div>
+        <% end %>
+
       		<%= link_to "Show", book_path(@book) %>
       		<%= link_to "Back", books_path %>
       </div>
