--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,11 +18,11 @@
           <% @books.each do |book| %>
             <tr>
               <td>
-                  <%= link_to user_path(@user.id) do %>
-                  <%= attachment_image_tag @user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %>
+                  <%= link_to user_path(user.id) do %>
+                  <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg" %>
                   <% end %>
               </td>
-              <td><%= link_to book.book_name, book_path(book) %></td>
+              <td><%= link_to book.title, book_path(book) %></td>
               <td><%= book.body %></td>
             </tr>
           <% end %>
