--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
@@ -23,7 +22,7 @@
                   <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
                   <% end %>
               </td>
-              <td><%= link_to book.book_name, book_path(book) %></td>
+              <td><%= link_to book.title, book_path(book) %></td>
               <td><%= book.body %></td>  
             </tr> 
           <% end %>
