--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,7 +6,7 @@
       <% if @user.errors.any? %>
         <%= @user.errors.count %>error prohibited this obj from being saved:
           <% @user.errors.full_messages.each do |message| %>
-          <%= message %>
+          error<%= message %>
         <% end %>
       <% end %>
 
