--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,15 @@
 <div class="container">
     <div class="row">
       <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+        <% if @book.errors.any? %>
+        <div id="error_explanation" class="alert alert-danger">
+          <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li>error<%= message %></li>
+          <% end %>
+        </ul>
+        <% end %>
   		  <h1>Editing Book</h1>
         <%= form_with model: @book, local: true do |f| %>
           <div class="form-group">
