--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,7 +2,7 @@
 <div class="container">      
   <div class="row">
     <div class="col-md-3">
-      <%= render 'books/list', user: @user,book: @book %>
+      <%= render 'books/list', user: @user,book: @newbook %>
     </div>
     <div class="col-md-8 offset-md-1">
   		<h2>Book detail</h2>
@@ -11,14 +11,16 @@
   		    <tr>
   		      <td>
             <%= link_to user_path(@user.id) do %>
-            <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %><br>
+            <%= attachment_image_tag @user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %><br>
             <%= @user.name %>
             <% end %>
             </td>
-            <td><%= @book.title %></td>
+            <td><%= link_to @book.title,book_path(@book) %></td>
             <td><%= @book.body %></td>
-            <td><%= link_to "Edit", edit_book_path(@book),class:"btn btn-sm btn-success" %></td>
-            <td><%= link_to "Destroy", book_path(@book), method: :delete ,"data-confirm" => "本当に消しますか?", class:"btn btn-sm btn-danger" %></td>
+            <% if @book.user_id == current_user.id %>
+              <td><%= link_to "Edit", edit_book_path(@book),class:"btn btn-sm btn-success" %></td>
+              <td><%= link_to "Destroy", book_path(@book), method: :delete ,"data-confirm" => "本当に消しますか?", class:"btn btn-sm btn-danger" %></td>
+            <% end %>
           </tr>
         </tbody>
       </table>
