--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
               <%= link_to "Home", root_path , class:"fas fa-home nav-link text-light" %>
               </li>
               <li>
-              <%= link_to "About", home_about_path, class:"fas fa-users nav-link text-light" %>
+              <%= link_to "About", home_about_path, class:"fas fa-link nav-link text-light" %>
               </li>
               <li>
               <%= link_to "sign up", new_user_registration_path , class:"fas fa-user-plus nav-link text-light" %>
@@ -60,7 +60,7 @@
       </div>
     </div>
     <%= yield %>
-    
+
     </main>
 
     <footer>
