--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-      <%= render 'books/list', user: @user,book: @book %>
+      <%= render 'books/list', user: @user,book: @newbook %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
@@ -18,7 +18,7 @@
           <% @users.each do |user| %>
             <tr>
               <td>
-                  <%= attachment_image_tag @user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %>
+                  <%= attachment_image_tag user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %>
               </td>
               <td><%= user.name %></td>
               <td><%= link_to "Show" , user_path(user) %></td>
