--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-      <%= render 'books/list', user: @user,book: @book %>
+      <%= render 'books/list', user: @user,book: @newbook %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
@@ -18,13 +18,13 @@
           <% @books.each do |book| %>
             <tr>
               <td>
-                  <%= link_to book_path(book.id) do %>
-                  <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+                  <%= link_to user_path(book.user) do %>
+                  <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg" %>
                   <% end %>
               </td>
               <td><%= link_to book.title, book_path(book) %></td>
-              <td><%= book.body %></td>  
-            </tr> 
+              <td><%= book.body %></td>
+            </tr>
           <% end %>
         </tbody>
       </table>
